# crowdbar

./: README.md  crowdbar.py  pyproject.toml  requirements.txt  scrapers.py
crowdbar/: __main__.py  app.py  scrapers.py
crowdbar/templates/: bar.html  index.html
templates/: bar.html  index.html
