[tool.poetry]
name = "crowdbar"
version = "0.0.0"
description = "An embeddable crowdfunding progress bar for OBS streams"
authors = ["Antoine Pietri <antoine.pietri1@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/seirl/crowdbar"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.4"
jinja2 = "^3.1.2"
babel = "^2.12.1"
lxml = "^4.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
