[project]
name = "crowdbar"
version = "0.0.0"
description = "An embeddable crowdfunding progress bar for OBS streams"
authors = [
  {name = "Antoine Pietri", email = "antoine.pietri1@gmail.com"},
]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/seirl/crowdbar"
requires-python = ">=3.11"
dependencies = [
  "aiohttp (>=3.13.1,<4.0.0)",
  "jinja2 (>=3.1.6,<4.0.0)",
  "babel (>=2.17.0,<3.0.0)",
  "lxml (>=6.0.2,<7.0.0)",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
