[project]
name = "crowdbar"
version = "0.0.0"
description = "An embeddable crowdfunding progress bar for OBS streams"
authors = [
  {name = "Antoine Pietri", email = "antoine.pietri1@gmail.com"},
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp (>=3.12.15,<4.0.0)",
  "jinja2 (>=3.1.6,<4.0.0)",
  "babel (>=2.17.0,<3.0.0)",
  "lxml (>=6.0.2,<7.0.0)",
]

[project.urls]
repository = "https://github.com/seirl/crowdbar"

[tool.setuptools.package-data]
"crowdbar" = [
    "templates/**/*.html",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
